# pico-sdk-dev-container

./: CMakeLists.txt  LICENSE  README.md  gitignore.txt
.devcontainer/: Dockerfile  devcontainer.json
scripts/: flash-linux.sh  flash-windows.ps1
src/: CMakeLists.txt  main.c
